--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,13 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                  "input": "./node_modules/leaflet/dist/images/",
+                  "output": "./"
+                
               }
             ],
             "styles": [
+              "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"
             ],
             "scripts": []
